--- a/Module-1_Assessment/assets/css/style.css
+++ b/Module-1_Assessment/assets/css/style.css
@@ -11,24 +11,23 @@ html {
     margin-left: 16vw;
     background-color: #4aaaa5;
     color: white !important;
-    
     font-weight: bold
     
   }
-  navbar{
-    background-color: #ffffff !important;
-    width: 100%;;  
-  }
+
   header .navbar{
-      background-color:#ffffff;
+    background-color: #ffffff !important;
+    width: 100%;  
   }
   .navbar ul{
-      margin-right: 16vw;
+    margin-right: 16vw;
+    font-family: 'Georgia', Times, Times New Roman, serif; 
   }
-  .navbar a {
-    font-family: 'Georgia', Times, Times New Roman, serif;  
-    
+  .navbar li{
+      border-right: solid #e0e0e0 1px;
+      
   }
+  
   body {
      
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -38,7 +37,7 @@ html {
     color: #777777; 
     min-height: 100%;
     display: grid;
-  grid-template-rows: 1fr auto;
+    grid-template-rows: 1fr auto;
     
   }
   .jumbotron{
@@ -46,15 +45,14 @@ html {
     max-width: 960px;
     height: 80vh;
     margin-top: 10px !important;
-   padding-top: 20px !important;
-   
-   margin-left:-10px;
-   margin-top:-10px;
-   height:90%;
-   min-width:80% !important;
-   position:relative;
-   margin-bottom:0px;
-padding-bottom:40px;
+    padding-top: 20px !important;
+    margin-left:-10px;
+    margin-top:-10px;
+    height:90%;
+    min-width:80% !important;
+    position:relative;
+    margin-bottom:0px;
+    padding-bottom:40px;
    
  }
  .jumbotron p{
@@ -62,7 +60,6 @@ padding-bottom:40px;
     width:100%;
     max-width:100%;
     margin-bottom: 5px;
-
 }
 
 form{
@@ -70,18 +67,14 @@ form{
 }
 form .form-group{
     color: #777777;
-}
-.form-group {
     margin-bottom: 5px;
 }
 form .label{
     color: #777777;
 }
-
 form .btn-info{
     margin-bottom: 5px;
-    background-color:#4aaaa5 !important;
-    
+    background-color:#4aaaa5 !important;  
 }
  h3{
     color: #4aaaa5;
@@ -91,7 +84,6 @@ form .btn-info{
   hr {
     border-color: #dddddd;
   }
-
 
   .footer {
     position: absolute;
@@ -104,9 +96,6 @@ form .btn-info{
     right: 0;
     border-top: 5px solid #4aaaa5;
   }
-  
-
-  
   p{
       margin-left: 10px;
   }
@@ -123,19 +112,14 @@ form .btn-info{
     padding-left: 20px;
     padding-right: 20px;
     font-family: 'Georgia', Times, Times New Roman, serif;
-    
   }
 
   img {
-
     padding-bottom: 15px;
-   
   } 
 
-  
-  .container {
+ .container {
     width: auto;
-    
     padding: 0 15px;
   }
  
